	* made disk_interface's status_t type a flags type
	* optimize resume data format to use less space
	* add a simpler overload to bencode() returning a vector<char>
	* introduced a new API for creating torrents, enabling file_storage optimizations
	* default build to not include functions deprecated in libtorrent 1.1 and earlier
	* add comment, created_by and creation_date to add_torrent_params
	* move session_flags to session_params
	* the entry class is now a standard variant type
	* use std::string_view instead of boost counterpart
	* libtorrent now requires C++17 to build
	* added support for WebTorrent

2.0.10 released

	* allow on_unknown_torrent method in the absence of active torrents (new plugin feature added)
	* add feature to async_move_storage() to not move files
	* fix reject resume data if it contains mismatching info hashes
	* fix clear the candidate_cache when clear peer_list
	* fix missing python converter for dht::announce_flags_t

2.0.9 released

	* fix issue with web seed connections when they close and re-open
	* fallocate() not supported is not a fatal error
	* fix proxying of IPv6 connections via IPv4 proxy
	* treat CGNAT address range as local IPs
	* add stricter checking of piece layers when loading torrents
	* add stricter checking of v1 and v2 hashes being consistent
	* cache failed DNS lookups as well as successful ones
	* add an i2p torrent state to control interactions with clear swarms
	* fix i2p SAM protocol parsing of quoted messages
	* expose i2p peer destination in peer_info
	* fix i2p tracker announces
	* fix issue with read_piece() stopping torrent on pieces not yet downloaded
	* improve handling of allow_i2p_mixed setting to work for magnet links
	* fix web seed request for renamed single-file torrents
	* fix issue where web seeds could disappear from resume data
	* extend save_resume with additional conditional flags
	* fix issue with retrying trackers in tiers > 0